Se cambio el calendario y se agrego el formulario para crear nuevo habito

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div id="calendario">
       Calendario
       <div class="calendario">
         <div class="dia"></div>
@@ -47,6 +47,18 @@
         <div class="dia"></div>
         <div class="dia"></div>
       </div>
+    </div>
+
+    <div id="establecer-habito">
+      <form action="">
+        <input type="text" placeholder="Nombre nuevo habito" />
+        <input
+          type="text"
+          placeholder="Unidad del habito. Ej:Minutos de lectura"
+        />
+        <input type="number" placeholder="Techo" />
+        <input type="number" placeholder="Piso" />
+      </form>
     </div>
   </body>
 </html>
