--- a/app/index.html
+++ b/app/index.html
@@ -8,44 +8,55 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="calendario">
-      Calendario
+    <div class="conteiner">
+      <div class="calendario-header">
+        <button class="btn btn-c-izq"></button>
+        <h1>Visual Calendario Habito</h1>
+        <button class="btn btn-c-der"></button>
+      </div>
+
       <div class="calendario">
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
-        <div class="dia"></div>
+        <div class="dia dia-nombre">Lunes</div>
+        <div class="dia-nombre">Martes</div>
+        <div class="dia-nombre">Miercoles</div>
+        <div class="dia-nombre">Jueves</div>
+        <div class="dia-nombre">Viernes</div>
+        <div class="dia-nombre">Sabado</div>
+        <div class="dia-nombre">Domingo</div>
+        <div class="dia">1</div>
+        <div class="dia">2</div>
+        <div class="dia">3</div>
+        <div class="dia">4</div>
+        <div class="dia">5</div>
+        <div class="dia">6</div>
+        <div class="dia">7</div>
+        <div class="dia">8</div>
+        <div class="dia">9</div>
+        <div class="dia">10</div>
+        <div class="dia">11</div>
+        <div class="dia">12</div>
+        <div class="dia">13</div>
+        <div class="dia" style="background-color: rgba(158, 206, 90, 0.825)">
+          <p>N° 14</p>
+          <p>25 minutos de entrenamiento</p>
+        </div>
+        <div class="dia">15</div>
+        <div class="dia">16</div>
+        <div class="dia">17</div>
+        <div class="dia">18</div>
+        <div class="dia">19</div>
+        <div class="dia">20</div>
+        <div class="dia">21</div>
+        <div class="dia">22</div>
+        <div class="dia">23</div>
+        <div class="dia">24</div>
+        <div class="dia">25</div>
+        <div class="dia">26</div>
+        <div class="dia">27</div>
+        <div class="dia">28</div>
+        <div class="dia">29</div>
+        <div class="dia">30</div>
+        <div class="dia">31</div>
       </div>
     </div>
 
